invalid_tests/expressions/test1.go
// Test 1: Invalid operator sequence
func main() {
    x := 10 * / 20
}
